--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htm>
+<html>
     <head>
         <title>Redirectory to Day 3 Challenges</title>
         <style>
@@ -30,4 +30,4 @@
         </div>
         
     </body>
-</htm>
+</html>
